@@ -1,3 +1,4 @@
+* Remove Pool.object_name_list
 * Add translated descriptor for Dict field
 * Clean private context keyword in RPC
 * Add cache section in configuration
